--- a/modulefiles/sloan/config
+++ b/modulefiles/sloan/config
@@ -4,4 +4,5 @@
 module-whatis   "This module initiates bin PATH for Sloan specific tools"
 
 prepend-path PATH /home/software/sloan/local/bin
+prepend-path LD_LIBRARY_PATH /home/software/sloan/local/lib
 
